# mngr

./: .gitignore  Cargo.toml  README.md
queries/: table-columns.sql  table-constraints.sql  table-details.sql  table.sql  tables-by-schema.sql  tables.sql
src/: config.rs  lib.rs  main.rs  renderers.rs  routes.rs  state.rs
src/db/: column.rs  constraint.rs  mod.rs  schema.rs  table.rs
src/ui/: form.rs  mod.rs  table.rs  utils.rs
static/css/: main.css  resets.css
static/css/components/: c-content.css  c-form.css  c-sidebar.css  c-table.css
static/js/: main.js
test/: README.md  mngr.toml
test/revisions/: 001.1669879889.some-tables.sql  002.1670458675.rename-musician-hometown.sql  003.1671195384.more-comments.sql
