[package]
name = "mngr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.2"
maud = { version = "0.24", features = ["actix-web"] }
serde = "1"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "json"] }
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.5"
